[gd_scene load_steps=4 format=3 uid="uid://bnhr48voqfl73"]

[ext_resource type="Script" uid="uid://qxc2t4geenxe" path="res://Menu/main_menu.gd" id="1_ci1se"]
[ext_resource type="FontFile" uid="uid://h8berclpli6i" path="res://Assets/Fonts/SyneMono-Regular.ttf" id="1_sla5p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ci1se"]
bg_color = Color(0, 0, 0, 0.44313726)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ci1se")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 232.0
offset_bottom = 269.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ci1se")

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 24.0
offset_right = 211.0
offset_bottom = 83.0
theme_override_colors/font_outline_color = Color(0.32, 0.20266666, 0, 0.92156863)
theme_override_fonts/font = ExtResource("1_sla5p")
theme_override_font_sizes/font_size = 32
text = "Play!"

[node name="Levels" type="Button" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 107.0
offset_right = 212.0
offset_bottom = 166.0
theme_override_colors/font_outline_color = Color(0.32, 0.20266666, 0, 0.92156863)
theme_override_fonts/font = ExtResource("1_sla5p")
theme_override_font_sizes/font_size = 32
text = "Levels"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 185.0
offset_right = 212.0
offset_bottom = 244.0
theme_override_colors/font_outline_color = Color(0.32, 0.20266666, 0, 0.92156863)
theme_override_fonts/font = ExtResource("1_sla5p")
theme_override_font_sizes/font_size = 32
text = "Exit
"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
